sonarQube fixed